<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragment_home"
        android:checked="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_title_home" />
    <item
        android:id="@+id/fragment_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_title_search" />
    <item
        android:id="@+id/fragment_map"
        android:icon="@drawable/ic_map"
        android:title="@string/menu_title_map" />
    <item
        android:id="@+id/fragment_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/menu_title_favorite" />
    <item
        android:id="@+id/fragment_my_info"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_title_info" />
</menu>
