<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_200">

    <TextView
        android:id="@+id/tv_emty1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/compare_emty1"
        android:textAppearance="@style/TextAppearance.Yeogieotte.Pretendard_h2"
        android:textColor="@color/gray_800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_emty2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compare_emty2"
        android:textAppearance="@style/TextAppearance.Yeogieotte.Pretendard_b6"
        android:textColor="@color/gray_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_emty1" />

    <TextView
        android:id="@+id/tv_emty3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compare_emty3"
        android:textAppearance="@style/TextAppearance.Yeogieotte.Pretendard_b6"
        android:textColor="@color/gray_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_emty2" />

    <TextView
        android:id="@+id/tv_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/compare_emty_plus"
        android:textAppearance="@style/TextAppearance.Yeogieotte.Pretendard_h3"
        android:textColor="@color/secondary_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_emty2" />

</androidx.constraintlayout.widget.ConstraintLayout>