<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_hotel_snackbar_bg"
        android:layout_width="314dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_snackbar_hotel_favorite"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lo_hotel_snackbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/iv_hotel_snackbar_bg"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_hotel_favorite_on"
            android:layout_width="112dp"
            android:layout_height="18dp"
            android:text="@string/favorite_hotel_on"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_hotel_favorite_room"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:gravity="top"
            android:lineSpacingExtra="4sp"
            android:text="@string/favorite_room"
            android:textColor="@color/white"
            android:translationY="-1.86sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_hotel_go_directly"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/go_directly"
        android:textColor="@color/snackbar_go"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_hotel_snackbar_bg"
        app:layout_constraintEnd_toStartOf="@id/iv_hotel_snackbar_line"
        app:layout_constraintTop_toTopOf="@id/iv_hotel_snackbar_bg" />

    <ImageView
        android:id="@+id/iv_hotel_snackbar_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_snackbar_line"
        app:layout_constraintBottom_toBottomOf="@id/iv_hotel_snackbar_bg"
        app:layout_constraintEnd_toStartOf="@id/tv_hotel_undo_favorite"
        app:layout_constraintTop_toTopOf="@id/iv_hotel_snackbar_bg" />

    <TextView
        android:id="@+id/tv_hotel_undo_favorite"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:layout_marginEnd="18dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/undo"
        android:textColor="@color/brand"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_hotel_snackbar_bg"
        app:layout_constraintEnd_toEndOf="@id/iv_hotel_snackbar_bg"
        app:layout_constraintTop_toTopOf="@id/iv_hotel_snackbar_bg" />
</androidx.constraintlayout.widget.ConstraintLayout>