<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_room_snackbar_bg"
        android:layout_width="314dp"
        android:layout_height="60dp"
        android:background="@color/gray_1000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/HotelSnackBarBg" />

    <TextView
        android:id="@+id/tv_room_favorite_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/favorite_hotel_on"
        android:textAppearance="@style/TextAppearance.Yeogieotte.Pretendard_b3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/iv_room_snackbar_bg"
        app:layout_constraintStart_toStartOf="@id/iv_room_snackbar_bg"
        app:layout_constraintTop_toTopOf="@id/iv_room_snackbar_bg" />

    <TextView
        android:id="@+id/tv_room_go_directly"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/go_directly"
        android:textAppearance="@style/TextAppearance.Yeogieotte.Pretendard_b6"
        android:textColor="@color/snackbar_go"
        app:layout_constraintBottom_toBottomOf="@id/iv_room_snackbar_bg"
        app:layout_constraintEnd_toStartOf="@id/iv_room_snackbar_line"
        app:layout_constraintTop_toTopOf="@id/iv_room_snackbar_bg" />

    <ImageView
        android:id="@+id/iv_room_snackbar_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_snackbar_line"
        app:layout_constraintBottom_toBottomOf="@id/iv_room_snackbar_bg"
        app:layout_constraintEnd_toStartOf="@id/tv_room_undo_favorite"
        app:layout_constraintTop_toTopOf="@id/iv_room_snackbar_bg" />

    <TextView
        android:id="@+id/tv_room_undo_favorite"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:layout_marginEnd="18dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/undo"
        android:textAppearance="@style/TextAppearance.Yeogieotte.Pretendard_b6"
        android:textColor="@color/brand"
        app:layout_constraintBottom_toBottomOf="@id/iv_room_snackbar_bg"
        app:layout_constraintEnd_toEndOf="@id/iv_room_snackbar_bg"
        app:layout_constraintTop_toTopOf="@id/iv_room_snackbar_bg" />
</androidx.constraintlayout.widget.ConstraintLayout>